[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hogebrug-status"
version = "0.1.0"
description = "CLI hulpprogramma om de status van de Hogebrug op te vragen"
authors = [{name = "AI Assistant"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
